[package]
name = "sd-2021-03-intro-wasm"
version = "0.1.0"
authors = ["YAMAMOTO Yuji <igrep@n.email.ne.jp>"]
edition = "2018"
description = "Example code of my article about WebAssembly in Software Design 2021/03."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
photon-rs = "0.2.0"
rand = { version = "0.8.0" }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]
